--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,13 @@
-
+#SPRING DATASOURCE
 spring.datasource.url=jdbc:mysql://localhost:3306/springboot1
 spring.datasource.username=springboot1
 spring.datasource.password=springboot1
 
+#JPA
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.hibernate.ddl-auto=create
+#spring.sql.init.mode=always
+
+#LOGGER
+logging.path=logs
+logging.file.name=${logging.path}/myapp.log
